--- a/.github/workflows/main_kaufman-london-hub.yml
+++ b/.github/workflows/main_kaufman-london-hub.yml
@@ -66,7 +66,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'Kaufman-London-Hub'
+          app-name: 'kaufman-london-hub_group-b596'
           slot-name: 'Production'
           package: .
           
