--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
     "memorystore": "^1.6.7",
+    "mongodb": "^6.10.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
